Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -605,7 +605,69 @@ echo "Hello world!"
 
 ## Ответы на упражнения для закрепления
 
+**1. Изучите, как были запущены оболочки, в столбце «Shell Started with…» и укажите необходимую информацию:**
 
+| Оболочка запустилась с...| Интерактивный | Вход в систему | Результат вывода `echo $0` |
+|--------------------------|---------------|----------------|----------------------------|
+| `sudo ssh user2@machine2`|               |                |                            |
+| <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F2</kbd> ||           |                            |    
+| `su - user2`             |               |                |                            |
+| `gnome-terminal`         |               |                |                            |
+| Обычный пользователь использует *консоль* для запуска экземпляра *sakura* |||          |
+| Скрипт с именем `test.sh`, содержащий команду `echo $0` |||                            |
+
+**2. Напишите команды `su` и `sudo` для запуска указанной оболочки:**  
+Оболочка интерактивного входа в систему как `user2`  
+`su`:  
+`sudo`:  
+Интерактивная оболочка входа в систему с правами `root`  
+`su`:  
+`sudo`:  
+Интерактивная оболочка без входа в систему с правами `root`  
+`su`:  
+`sudo`:  
+Интерактивная оболочка без входа в систему как `user2`  
+`su`:  
+`sudo`:
+
+**3. Какой файл запуска читается при запуске оболочки в разделе «Тип оболочки»?**
+
+| Тип оболочки | `/etc/profile` | `/etc/bash.bashrc` | `~/.profile` | `~/.bashrc` |
+|--------------|----------------|--------------------|--------------|-------------|
+| Оболочка интерактивного входа в систему как `user2` |||           |             |
+| Интерактивная оболочка входа в систему с правами `root` |||       |             |    
+| Интерактивная оболочка без входа в систему с правами `root` |||   |             | 
+| Интерактивная оболочка без входа в систему как `user2` |||        |             |
 
 
 ## Ответы на упражнения для размышления
+
+**1. В Bash мы можем написать простой `Hello world!` функцию, включив следующий код в пустой файл:**
+```console
+function hello() {
+	 echo "Hello world!"
+}
+```
+* Что нам делать дальше, чтобы функция стала доступной для оболочки? 
+* Когда он станет доступным для текущей оболочки, как вы его вызовете? 
+* Чтобы автоматизировать процесс, в какой файл вы поместите функцию и ее вызов, чтобы она запускалась, когда `user2` открывает терминал из сеанса X Window? Какой это тип оболочки? 
+* В какой файл вы поместите функцию и ее вызов, чтобы она запускалась, когда `root` запускает новую интерактивную оболочку, независимо от того, является ли это логином или нет?
+
+**2. Взгляните на следующий базовый вариант `Hello world!` сценарий bash:**
+```console
+#!/bin/bash
+
+#hello_world: a simple bash script to discuss interaction in scripts.
+
+echo "Hello world!"
+```
+* Предположим, мы делаем скрипт исполняемым и запускаем его. Это будет интерактивный сценарий? Почему? 
+* Что делает сценарий интерактивным?
+
+**3. Представьте, что вы изменили значения некоторых переменных в `~/.bashrc` и хотите, чтобы эти изменения вступили в силу без перезагрузки. Как можно добиться этого из домашнего каталога двумя разными способами?** 
+
+**4. Джон только что начал сеанс X Window на сервере Linux. Он открывает эмулятор терминала для выполнения некоторых административных задач, но, что удивительно, сеанс зависает, и ему нужно открыть текстовую оболочку.**  
+Как он может открыть эту оболочку `tty`? 
+* Какие файлы запуска будут получены? 
+
+**5. Линда - пользователь Linux-сервера. Она любезно просит администратора иметь файл `~/.bash_login`, чтобы она могла печатать время и дату на экране при входе в систему. Другим пользователям нравится эта идея, и они следуют ее примеру. Администратору сложно создать файл для всех остальных 5 пользователей на сервере, поэтому он решает добавить новую политику и создать `~/.bash_login` для всех потенциальных новых пользователей. Как администратор может выполнить эту задачу?**
