Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -468,12 +468,12 @@ user2@debian:~$ ls -a
 
 | Оболочка запустилась с...| Интерактивный | Вход в систему | Результат вывода `echo $0` |
 |:-------------------------|:--------------|:---------------|:---------------------------|
-| `sudo ssh user2@machine2`|               |                |                            |
-| <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F2</kbd> ||           |                            |    
-| `su - user2`             |               |                |                            |
-| `gnome-terminal`         |               |                |                            |
-| Обычный пользователь использует *консоль* для запуска экземпляра *sakura* |||          |
-| Скрипт с именем `test.sh`, содержащий команду `echo $0` |||                            |
+| `sudo ssh user2@machine2`| Yes           | Yes            | `-bash`                    |
+| <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F2</kbd> |Yes|Yes     | `-bash`                    |    
+| `su - user2`             | Yes           | Yes            | `-su`                      |
+| `gnome-terminal`         | Yes           | No             | `bash`                     |
+| Обычный пользователь использует *консоль* для запуска экземпляра *sakura* |Yes|Yes|`/bin/bash`|
+| Скрипт с именем `test.sh`, содержащий команду `echo $0` |No|No| `./test.sh`            |
 
 2. Напишите команды `su` и `sudo` для запуска указанной оболочки:  
 Оболочка интерактивного входа в систему как `user2`  
