Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -468,12 +468,12 @@ user2@debian:~$ ls -a
 
 | Оболочка запустилась с...| Интерактивный | Вход в систему | Результат вывода `echo $0` |
 |:-------------------------|:--------------|:---------------|:---------------------------|
-| `sudo ssh user2@machine2`| Yes           | Yes            | `-bash`                    |
-| <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F2</kbd> |Yes|Yes     | `-bash`                    |    
-| `su - user2`             | Yes           | Yes            | `-su`                      |
-| `gnome-terminal`         | Yes           | No             | `bash`                     |
-| Обычный пользователь использует *консоль* для запуска экземпляра *sakura* |Yes|Yes|`/bin/bash`|
-| Скрипт с именем `test.sh`, содержащий команду `echo $0` |No|No| `./test.sh`            |
+| `sudo ssh user2@machine2`|               |                |                            |
+| <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F2</kbd> ||           |                            |    
+| `su - user2`             |               |                |                            |
+| `gnome-terminal`         |               |                |                            |
+| Обычный пользователь использует *консоль* для запуска экземпляра *sakura* |||          |
+| Скрипт с именем `test.sh`, содержащий команду `echo $0` |||                            |
 
 2. Напишите команды `su` и `sudo` для запуска указанной оболочки:  
 Оболочка интерактивного входа в систему как `user2`  
@@ -608,38 +608,43 @@ echo "Hello world!"
 ## Ответы на упражнения для закрепления
 
 **1. Изучите, как были запущены оболочки, в столбце «Shell Started with…» и укажите необходимую информацию:**
-
 | Оболочка запустилась с...| Интерактивный | Вход в систему | Результат вывода `echo $0` |
 |:-------------------------|:--------------|:---------------|:---------------------------|
-| `sudo ssh user2@machine2`|               |                |                            |
-| <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F2</kbd> ||           |                            |    
-| `su - user2`             |               |                |                            |
-| `gnome-terminal`         |               |                |                            |
-| Обычный пользователь использует *консоль* для запуска экземпляра *sakura* |||          |
-| Скрипт с именем `test.sh`, содержащий команду `echo $0` |||                            |
+| `sudo ssh user2@machine2`| Yes           | Yes            | `-bash`                    |
+| <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F2</kbd> |Yes|Yes     | `-bash`                    |    
+| `su - user2`             | Yes           | Yes            | `-su`                      |
+| `gnome-terminal`         | Yes           | No             | `bash`                     |
+| Обычный пользователь использует *консоль* для запуска экземпляра *sakura* |Yes|Yes|`/bin/bash`|
+| Скрипт с именем `test.sh`, содержащий команду `echo $0` |No|No| `./test.sh`            |
 
 **2. Напишите команды `su` и `sudo` для запуска указанной оболочки:**  
+
 Оболочка интерактивного входа в систему как `user2`  
-`su`:  
-`sudo`:  
+`su`  
+`su - user2`, `su -l user2` или `su --login user2`
+`sudo`  
+`sudo su - user2`, `sudo su -l user2` or `sudo su --login user2`
+
 Интерактивная оболочка входа в систему с правами `root`  
-`su`:  
-`sudo`:  
+`su`:  `su - root` или `su -`
+`sudo`:  `sudo su - root`, `sudo su -` или `sudo -i`
+
 Интерактивная оболочка без входа в систему с правами `root`  
-`su`:  
-`sudo`:  
+`su`:  `su root` or `su`
+`sudo`: `sudo su root`, `sudo su`, `sudo -s` or `sudo -u root -s`
+
 Интерактивная оболочка без входа в систему как `user2`  
-`su`:  
-`sudo`:
+`su`: `su user2`
+`sudo`: `sudo su user2` or `sudo -u user2 -s`
 
 **3. Какой файл запуска читается при запуске оболочки в разделе «Тип оболочки»?**
 
 | Тип оболочки | `/etc/profile` | `/etc/bash.bashrc` | `~/.profile` | `~/.bashrc` |
 |:-------------|:---------------|:-------------------|:-------------|:------------|
-| Оболочка интерактивного входа в систему как `user2` |||           |             |
-| Интерактивная оболочка входа в систему с правами `root` |||       |             |    
-| Интерактивная оболочка без входа в систему с правами `root` |||   |             | 
-| Интерактивная оболочка без входа в систему как `user2` |||        |             |
+| Оболочка интерактивного входа в систему как `user2` |Yes|Yes|Yes  |             |
+| Интерактивная оболочка входа в систему с правами `root` |Yes|Yes|No|No          |    
+| Интерактивная оболочка без входа в систему с правами `root` |No|Yes|No|No       | 
+| Интерактивная оболочка без входа в систему как `user2` |No|Yes|No |Yes          |
 
 
 ## Ответы на упражнения для размышления
@@ -650,10 +655,17 @@ function hello() {
 	 echo "Hello world!"
 }
 ```
-* Что нам делать дальше, чтобы функция стала доступной для оболочки? 
-* Когда он станет доступным для текущей оболочки, как вы его вызовете? 
+* Что нам делать дальше, чтобы функция стала доступной для оболочки?  
+Чтобы сделать функцию доступной для текущей оболочки, мы должны предоставить файл, который ее включает.
+
+* Когда он станет доступным для текущей оболочки, как вы его вызовете?  
+Мы вызовем его, введя его имя в терминал.
+
 * Чтобы автоматизировать процесс, в какой файл вы поместите функцию и ее вызов, чтобы она запускалась, когда `user2` открывает терминал из сеанса X Window? Какой это тип оболочки? 
-* В какой файл вы поместите функцию и ее вызов, чтобы она запускалась, когда `root` запускает новую интерактивную оболочку, независимо от того, является ли это логином или нет?
+Лучше всего его разместить `/home/user2/.bashrc`. Вызванная оболочка будет интерактивной без входа в систему.
+
+* В какой файл вы поместите функцию и ее вызов, чтобы она запускалась, когда `root` запускает новую интерактивную оболочку, независимо от того, является ли это входом в систему или нет?
+В `/etc/bash.bashrc`, поскольку этот файл запускается для всех интерактивных оболочек независимо от входа в систему.
 
 **2. Взгляните на следующий базовый вариант `Hello world!` сценарий bash:**
 ```console
@@ -664,12 +676,23 @@ function hello() {
 echo "Hello world!"
 ```
 * Предположим, мы делаем скрипт исполняемым и запускаем его. Это будет интерактивный сценарий? Почему? 
+Нет, поскольку здесь нет взаимодействия с человеком и пользователь не вводит никаких команд.
+
 * Что делает сценарий интерактивным?
+Дело в том, что для этого требуется ввод пользователя.
 
 **3. Представьте, что вы изменили значения некоторых переменных в `~/.bashrc` и хотите, чтобы эти изменения вступили в силу без перезагрузки. Как можно добиться этого из домашнего каталога двумя разными способами?** 
+`$ source .bashrc`
+или
+`$ . .bashrc`
 
 **4. Джон только что начал сеанс X Window на сервере Linux. Он открывает эмулятор терминала для выполнения некоторых административных задач, но, что удивительно, сеанс зависает, и ему нужно открыть текстовую оболочку.**  
-Как он может открыть эту оболочку `tty`? 
-* Какие файлы запуска будут получены? 
+* Как он может открыть эту оболочку `tty`?  
+Он мог сделать это, нажав <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>-<kbd>F6</kbd>, чтобы войти в одну из шести оболочек tty.
+
+* Какие файлы запуска будут получены?  
+`/etc/profile`
+`/home/john/.profile`
 
 **5. Линда - пользователь Linux-сервера. Она любезно просит администратора иметь файл `~/.bash_login`, чтобы она могла печатать время и дату на экране при входе в систему. Другим пользователям нравится эта идея, и они следуют ее примеру. Администратору сложно создать файл для всех остальных 5 пользователей на сервере, поэтому он решает добавить новую политику и создать `~/.bash_login` для всех потенциальных новых пользователей. Как администратор может выполнить эту задачу?**
+Он мог добиться этого, поместив `.bash_login` в каталог `/etc/skel`.
