Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -4,7 +4,7 @@
 |:----------------|:--------------------------------------------|
 | **Версия:**     | 5.0                                         |
 | **Тема:**       | 105 Оболочки и сценарии оболочки            |                           
-| **Цель:**       | 105.1 Основы интернет-протоколов            |
+| **Цель:**       | 105.1 Настройка и использование среды оболочки |
 | **Урок:**       | 1 из 3                                      |
 
 
