Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -10,3 +10,85 @@
 
 ## Введение
 
+Подумайте о переменной как о воображаемом блоке, в который можно временно поместить часть информации. Как и в случае со своими сценариями инициализации, Bash классифицирует переменные как *shell/local* (те, которые живут только в пределах оболочки, в которой они были созданы), так и *environment/global* (те, которые наследуются дочерними оболочками и/или процессами). Фактически, в предыдущем уроке мы рассмотрели оболочки и их сценарии настройки или инициализации. Теперь удобно отметить, что сила этих файлов запуска заключается в том, что они позволяют нам использовать переменные, а также псевдонимы и функции, которые помогают нам создавать и настраивать среду оболочки по нашему выбору.
+
+
+## Переменные: присвоение и ссылка
+
+Переменная может быть определена как имя, содержащее значение. 
+
+В Bash присвоение значения имени называется *присвоением переменной* и является способом, которым мы создаем или устанавливаем переменные. С другой стороны, процесс доступа к значению, содержащемуся в имени, называется *ссылкой на переменную*. 
+
+Синтаксис для присвоения переменных:
+
+```console
+<variable_name>=<variable_value>
+```
+
+Например:
+
+```console
+$ distro=zorinos
+```
+
+Переменная `distro` равна `zorinos`, то есть есть часть памяти, содержащая значение `zorinos`, причем `distro` является указателем на нее. 
+
+Однако обратите внимание, что при присвоении переменной не может быть пробелов по обе стороны от знака равенства:
+
+```console
+$ distro =zorinos
+-bash: distro: command not found
+$ distro= zorinos
+-bash: zorinos: command not found
+```
+
+Из-за нашей ошибки Bash считал `distro` и `zorinos` командами. 
+
+Для ссылки на переменную (то есть для проверки ее значения) мы используем команду `echo` перед именем переменной со знаком `$`:
+
+```console
+$ echo $distro
+zorinos
+```
+
+
+## Имена переменных
+
+При выборе имени переменных необходимо учитывать определенные правила. 
+
+Имя переменной может содержать буквы (`a-z`, `A-Z`), цифры (`0-9`) и символы подчеркивания (`_`):
+
+```console
+$ distro=zorinos
+$ echo $distro
+zorinos
+$ DISTRO=zorinos
+$ echo $DISTRO
+zorinos
+$ distro_1=zorinos
+$ echo $distro_1
+zorinos
+$ _distro=zorinos
+$ echo $_distro
+zorinos
+```
+
+Он не может начинаться с числа, иначе Bash запутается:
+
+```console
+$ 1distro=zorinos
+-bash: 1distro=zorinos: command not found
+```
+
+Он не может содержать пробелов (даже без кавычек); по соглашению вместо них используются подчеркивания:
+
+```console
+$ "my distro"=zorinos
+-bash: my: command not found
+$ my_distro=zorinos
+$ echo $my_distro
+zorinos
+```
+
+## Значения переменных
+
