Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -90,5 +90,93 @@ $ echo $my_distro
 zorinos
 ```
 
+
 ## Значения переменных
+
+Что касается ссылки или значения переменных, также важно учитывать ряд правил. 
+
+Переменные могут содержать любые буквенно-цифровые символы (`a-z`, `A-Z`, `0-9`), а также большинство других символов (`?`,`!`,`*`,`.`,`/` и т. д.):
+
+```console
+$ distro=zorin12.4?
+$ echo $distro
+zorin12.4?
+```
+
+Значения переменных должны быть заключены в кавычки, если они содержат одиночные пробелы:
+
+```console
+$ distro=zorin 12.4
+-bash: 12.4: command not found
+$ distro="zorin 12.4"
+$ echo $distro
+zorin 12.4
+$ distro='zorin 12.4'
+$ echo $distro
+zorin 12.4
+```
+
+Значения переменных также должны быть заключены в кавычки, если они содержат такие символы, как те, которые используются для перенаправления (`<`,`>`) или символ вертикальной черты (`|`). Единственное, что делает следующая команда, - это создает пустой файл с именем `zorin`:
+
+```console
+$ distro=>zorin
+$ echo $distro
+
+$ ls zorin
+zorin
+```
+
+```console
+$ distro=">zorin"
+$ echo $distro
+>zorin
+```
+
+Однако одинарные и двойные кавычки не всегда взаимозаменяемы. В зависимости от того, что мы делаем с переменной (присваивание или ссылка), использование одной или другой имеет последствия и даст разные результаты. В контексте присвоения переменных одинарные кавычки буквально принимают все символы значения переменной, тогда как двойные кавычки допускают замену переменных:
+
+```console
+$ lizard=uromastyx
+$ animal='My $lizard'
+$ echo $animal
+My $lizard
+$ animal="My $lizard"
+$ echo $animal
+My uromastyx
+```
+
+С другой стороны, при ссылке на переменную, значение которой включает некоторые начальные (или дополнительные) пробелы - иногда в сочетании со звездочками - обязательно использовать двойные кавычки после команды `echo`, чтобы избежать *разделения полей* и *расширения имени пути*:
+
+```console
+$ lizard="   genus   |   uromastyx"
+$ echo $lizard
+genus | uromastyx
+$ echo "$lizard"
+   genus   |   uromastyx
+```
+
+Если ссылка на переменную содержит закрывающий восклицательный знак, это должен быть последний символ в строке (иначе Bash будет думать, что мы имеем в виду событие истории):
+
+
+```console
+$ distro=zorin.?/!os
+-bash: !os: event not found
+$ distro=zorin.?/!
+$ echo $distro
+zorin.?/!
+```
+
+Любая обратная косая черта должна быть экранирована другой обратной косой чертой. Кроме того, если обратная косая черта является последним символом в строке, и мы не избегаем ее, Bash интерпретирует, что нам нужен разрыв строки, и выдаст нам новую строку:
+
+```console
+$ distro=zorinos\
+>
+$ distro=zorinos\\
+$ echo $distro
+zorinos\
+```
+
+В следующих двух разделах мы суммируем основные различия между *локальными* переменными и переменными *среды*.
+
+
+## Локальные переменные или переменные оболочки
 
