Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -180,3 +180,40 @@ zorinos\
 
 ## Локальные переменные или переменные оболочки
 
+Локальные переменные или переменные оболочки существуют только в той оболочке, в которой они созданы. По соглашению локальные переменные пишутся строчными буквами. 
+
+Для проведения нескольких тестов создадим локальную переменную. Как объяснялось выше, мы выбираем подходящее имя переменной и приравниваем его к соответствующему значению. Например:
+
+```console
+$ reptile=tortoise
+```
+
+Давайте теперь используем команду `echo` для ссылки на нашу переменную и проверяем, что все прошло, как ожидалось:
+
+```console
+$ echo $reptile
+tortoise
+```
+
+В определенных сценариях - например, при написании скриптов - неизменяемость может быть интересной особенностью переменных. Если мы хотим, чтобы наши переменные были неизменными, мы можем создать их `readonly`:
+
+```console
+$ readonly reptile=tortoise
+```
+
+Или поверните их так после того, как они были созданы:
+
+```console
+$ reptile=tortoise
+$ readonly reptile
+```
+
+Теперь, если мы попытаемся изменить значение `reptile`, Bash откажется:
+
+```console
+$ reptile=lizard
+-bash: distro: readonly variable
+```
+
+>Чтобы вывести список всех переменных только для чтения в нашем текущем сеансе, введите в терминал `readonly` или `readonly -p`.
+
