Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -217,3 +217,63 @@ $ reptile=lizard
 
 >Чтобы вывести список всех переменных только для чтения в нашем текущем сеансе, введите в терминал `readonly` или `readonly -p`.
 
+`set` полезная команда при работе с локальными переменными. 
+
+`set` выводит все текущие назначенные переменные и функции оболочки. Так как может быть много строк (попробуйте сами!), рекомендуется использовать ее в сочетании с пагинатором, например `less`:
+
+```console
+$ set | less
+BASH=/bin/bash
+BASHOPTS=checkwinsize:cmdhist:complete_fullquote:expand_aliases:extglob:extquote:force_fignore:histappend:interactive_comments:login_shell:progcomp:promptvars:sourcepath
+BASH_ALIASES=()
+BASH_ARGC=()
+BASH_ARGV=()
+BASH_CMDS=()
+BASH_COMPLETION_COMPAT_DIR=/etc/bash_completion.d
+BASH_LINENO=()
+BASH_SOURCE=()
+BASH_VERSINFO=([0]="4" [1]="4" [2]="12" [3]="1" [4]="release" [5]="x86_64-pc-linux-gnu")
+BASH_VERSION='4.4.12(1)-release'
+(...)
+```
+
+Есть ли у нашей `reptile`  переменная?
+
+```console
+$ set | grep reptile
+reptile=tortoise
+```
+
+Да вот она! 
+
+Однако `reptile`, будучи локальной переменной, не будет унаследована никакими дочерними процессами, порожденными текущей оболочкой:
+
+```console
+$ bash
+$ set | grep reptile
+$
+```
+
+И, конечно же, мы не можем повторить его значение:
+
+```console
+$ echo $reptile
+$
+```
+
+>Набрав команду `bash` в терминал, мы открываем новую (дочернюю) оболочку.
+
+Чтобы отключить любые переменные (локальные или глобальные), мы используем команду `unset`:
+
+
+```console
+$ echo $reptile
+tortoise
+$ unset reptile
+$ echo $reptile
+$
+```
+
+>После `unset` должно следовать только имя переменной (без символа `$`).
+
+
