Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -277,3 +277,118 @@ $
 >После `unset` должно следовать только имя переменной (без символа `$`).
 
 
+## Глобальные переменные или переменные среды
+
+Глобальные переменные или переменные среды существуют для текущей оболочки, а также для всех последующих процессов, порожденных из нее. По соглашению переменные среды пишутся прописными буквами:
+
+```console
+$ echo $SHELL
+/bin/bash
+```
+
+Мы можем рекурсивно передать значение этих переменных другим переменным, и значение последней в конечном итоге расширится до значения первой:
+
+```console
+$ my_shell=$SHELL
+$ echo $my_shell
+/bin/bash
+$ your_shell=$my_shell
+$ echo $your_shell
+/bin/bash
+$ our_shell=$your_shell
+$ echo $our_shell
+/bin/bash
+```
+
+Чтобы локальная переменная оболочки стала переменной среды, необходимо использовать команду экспорта:
+
+```console
+$ export reptile
+```
+
+С помощью `export reptile` мы превратили нашу локальную переменную в переменную среды, чтобы дочерние оболочки могли ее распознать и использовать:
+
+```console
+$ bash
+$ echo $reptile
+tortoise
+```
+
+Точно так же экспорт можно использовать для одновременной установки и экспорта переменной:
+
+```console
+$ export amphibian=frog
+```
+
+Теперь мы можем открыть новый экземпляр Bash и успешно сослаться на новую переменную:
+
+```console
+$ bash
+$ echo $amphibian
+frog
+```
+
+>С помощью `export -n <VARIABLE-NAME>` переменная будет преобразована обратно в локальную переменную оболочки.
+
+Команда `export` также предоставит нам список всех существующих переменных среды при вводе самостоятельно (или с параметром `-p`):
+
+```console
+$ export
+declare -x HOME="/home/user2"
+declare -x LANG="en_GB.UTF-8"
+declare -x LOGNAME="user2"
+(...)
+declare -x PATH="/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games"
+declare -x PWD="/home/user2"
+declare -x SHELL="/bin/bash"
+declare -x SHLVL="1"
+declare -x SSH_CLIENT="192.168.1.10 49330 22"
+declare -x SSH_CONNECTION="192.168.1.10 49330 192.168.1.7 22"
+declare -x SSH_TTY="/dev/pts/0"
+declare -x TERM="xterm-256color"
+declare -x USER="user2"
+declare -x XDG_RUNTIME_DIR="/run/user/1001"
+declare -x XDG_SESSION_ID="8"
+declare -x reptile="tortoise"
+```
+
+>Команда `declare -x` эквивалентна `export`.
+
+Еще две команды, которые можно использовать для печати списка всех переменных среды: `env` и `printenv`:
+
+```console
+$ env
+SSH_CONNECTION=192.168.1.10 48678 192.168.1.7 22
+LANG=en_GB.UTF-8
+XDG_SESSION_ID=3
+USER=user2
+PWD=/home/user2
+HOME=/home/user2
+SSH_CLIENT=192.168.1.10 48678 22
+SSH_TTY=/dev/pts/0
+MAIL=/var/mail/user2
+TERM=xterm-256color
+SHELL=/bin/bash
+SHLVL=1
+LOGNAME=user2
+XDG_RUNTIME_DIR=/run/user/1001
+PATH=/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games
+_=/usr/bin/env
+```
+
+Помимо того, что это синоним `env`, мы можем иногда использовать `printenv` аналогично тому, как мы используем команду `echo` для проверки значения переменной:
+
+```console
+$ echo $PWD
+/home/user2
+$ printenv PWD
+/home/user2
+```
+
+Однако обратите внимание, что с `printenv` перед именем переменной не ставится знак $.
+
+>`PWD` хранит путь к текущему рабочему каталогу. Об этой и других распространенных переменных среды мы узнаем позже.
+
+
+## Запуск программы в измененной среде
+
