Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -387,8 +387,8 @@ $ printenv PWD
 
 Однако обратите внимание, что с `printenv` перед именем переменной не ставится знак $.
 
->`PWD` хранит путь к текущему рабочему каталогу. Об этой и других распространенных переменных среды мы узнаем позже.
+>`PWD` хранит путь к текущему рабочему каталогу. Об этой и других общих переменных окружения мы узнаем позже.
 
 
-## Запуск программы в измененной среде
+## Запуск программы в измененном окружении
 
