Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -4,7 +4,7 @@
 |:----------------|:--------------------------------------------|
 | **Версия:**     | 5.0                                         |
 | **Тема:**       | 105 Оболочки и сценарии оболочки            |                           
-| **Цель:**       | 105.2 Настройка и использование среды оболочки |
+| **Цель:**       | 105.2 Настройка и использование окружения оболочки |
 | **Урок:**       | 2 из 3                                      |
 
 
@@ -277,9 +277,9 @@ $
 >После `unset` должно следовать только имя переменной (без символа `$`).
 
 
-## Глобальные переменные или переменные среды
+## Глобальные переменные или переменные окружения
 
-Глобальные переменные или переменные среды существуют для текущей оболочки, а также для всех последующих процессов, порожденных из нее. По соглашению переменные среды пишутся прописными буквами:
+Глобальные переменные или переменные окружения существуют для текущей оболочки, а также для всех последующих процессов, порожденных из нее. По соглашению переменные окружения пишутся прописными буквами:
 
 ```console
 $ echo $SHELL
@@ -300,13 +300,13 @@ $ echo $our_shell
 /bin/bash
 ```
 
-Чтобы локальная переменная оболочки стала переменной среды, необходимо использовать команду экспорта:
+Чтобы локальная переменная оболочки стала переменной окружения, необходимо использовать команду экспорта:
 
 ```console
 $ export reptile
 ```
 
-С помощью `export reptile` мы превратили нашу локальную переменную в переменную среды, чтобы дочерние оболочки могли ее распознать и использовать:
+С помощью `export reptile` мы превратили нашу локальную переменную в переменную окружения, чтобы дочерние оболочки могли ее распознать и использовать:
 
 ```console
 $ bash
@@ -330,7 +330,7 @@ frog
 
 >С помощью `export -n <VARIABLE-NAME>` переменная будет преобразована обратно в локальную переменную оболочки.
 
-Команда `export` также предоставит нам список всех существующих переменных среды при вводе самостоятельно (или с параметром `-p`):
+Команда `export` также предоставит нам список всех существующих переменных окружения при вводе самостоятельно (или с параметром `-p`):
 
 ```console
 $ export
@@ -354,7 +354,7 @@ declare -x reptile="tortoise"
 
 >Команда `declare -x` эквивалентна `export`.
 
-Еще две команды, которые можно использовать для печати списка всех переменных среды: `env` и `printenv`:
+Еще две команды, которые можно использовать для печати списка всех переменных окружения: `env` и `printenv`:
 
 ```console
 $ env
