Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -392,3 +392,60 @@ $ printenv PWD
 
 ## Запуск программы в измененном окружении
 
+`env` можно использовать для изменения окружения оболочки во время выполнения программы. 
+
+Чтобы начать новый сеанс Bash с максимально пустой средой - очистив большинство переменных (а также функции и псевдонимы) - мы будем использовать `env` с параметром `-i`:
+
+```console
+$ env -i bash
+```
+
+Теперь большинство переменных нашего окружения исчезли:
+
+```console
+$ echo $USER
+$
+```
+
+Осталось всего лишь несколько:
+
+```console
+$ env
+LS_COLORS=
+PWD=/home/user2
+SHLVL=1
+_=/usr/bin/printenv
+```
+
+Мы также можем использовать `env` для установки определенной переменной для конкретной программы. 
+
+В нашем предыдущем уроке, обсуждая неинтерактивные оболочки без входа в систему, мы видели, как сценарии не считывают стандартные файлы запуска, а вместо этого ищут значение переменной `BASH_ENV` и используют его в качестве своего файла запуска, если он существует.
+
+Продемонстрируем этот процесс: 
+
+1. Мы создаем собственный файл запуска с именем `.startup_script` со следующим содержимым:
+
+```console
+CROCODILIAN=caiman
+```
+
+2. Мы пишем сценарий Bash с именем `test_env.sh` со следующим содержимым:
+
+```console
+#!/bin/bash
+
+echo $CROCODILIAN
+```
+
+3. Мы устанавливаем исполняемый бит для нашего скрипта `test_env.sh`:
+
+```console
+$ chmod +x test_env.sh
+```
+
+4. Наконец, мы используем `env`, чтобы установить `BASH_ENV` в `.startup_script` для `test_env.sh`:
+
+```console
+$ env BASH_ENV=/home/user2/.startup_script ./test_env.sh
+caiman
+```
