Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -449,3 +449,45 @@ $ chmod +x test_env.sh
 $ env BASH_ENV=/home/user2/.startup_script ./test_env.sh
 caiman
 ```
+
+Команда `env` неявна, даже если мы избавимся от нее:
+
+```console
+$ BASH_ENV=/home/user2/.startup_script ./test_env.sh
+caiman
+```
+
+>Если вы не понимаете строку `#!/bin/bash` или команду `chmod +x`, не паникуйте! Мы узнаем все необходимое о сценариях оболочки в будущих уроках. На данный момент просто помните, что для выполнения сценария из его собственного каталога мы используем `./some_script`.
+
+
+## Общие переменные среды
+
+Пришло время рассмотреть некоторые из наиболее важных переменных окружения, которые установлены в конфигурационных файлах Bash.
+
+`DISPLAY`  
+Применительно к X-серверу значение этой переменной обычно состоит из трех элементов: 
+
+* Имя хоста (его отсутствие означает `localhost`), на котором работает X-сервер. 
+* Двоеточие в качестве разделителя. 
+* Число (обычно это `0` и относится к дисплею компьютера).  
+```console
+$ printenv DISPLAY
+:0
+```
+Пустое значение этой переменной означает сервер без системы X Window. Дополнительный номер - как в `my.xserver: 0:1` - будет относиться к номеру экрана, если существует больше одного.
+
+`HISTCONTROL`  
+Эта переменная контролирует, какие команды сохраняются в `HISTFILE` (см. ниже). Возможных три их значения: 
+
+`ignorespace`  
+Команды, начинающиеся с пробела, не сохраняются. 
+
+`ignoredups`  
+Команда, аналогичная предыдущей, не будет сохранена. 
+
+`ignoreboth`  
+Команды, которые попадают в любую из двух предыдущих категорий, не будут сохранены.
+```console
+$ echo $HISTCONTROL
+ignoreboth
+```
