Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -491,3 +491,67 @@ $ printenv DISPLAY
 $ echo $HISTCONTROL
 ignoreboth
 ```
+
+`HISTSIZE`  
+Она устанавливает количество команд, которые будут храниться в памяти, пока длится сеанс оболочки.
+```console
+$ echo $HISTSIZE
+1000
+```
+
+`HISTFILESIZE`  
+Она устанавливает количество команд, которые будут сохранены в `HISTFILE` как в начале, так и в конце сеанса:
+```console
+$ echo $HISTFILESIZE
+2000
+```
+
+`HISTFILE`  
+Имя файла, в котором хранятся все команды по мере их ввода. По умолчанию этот файл находится в `~/.bash_history`:
+```console
+$ echo $HISTFILESIZE
+2000
+```
+
+`HISTFILE`  
+Имя файла, в котором хранятся все команды по мере их ввода. По умолчанию этот файл находится в `~/.bash_history`:
+```console
+$ echo $HISTFILE
+/home/user2/.bash_history
+```
+
+>Чтобы просмотреть содержимое `HISTFILE`, мы просто набираем `history`. В качестве альтернативы мы можем указать количество команд, которые мы хотим видеть, передав аргумент (количество самых последних команд) в `history`, например `history 3`.
+
+`HOME`  
+Эта переменная хранит абсолютный путь к домашнему каталогу текущего пользователя и устанавливается, когда пользователь входит в систему. 
+
+Этот фрагмент кода - из `~/.profile` - не требует пояснений (он является источником `"$HOME/.bashrc"`, если он существует):
+
+```console
+    # include .bashrc if it exists
+    if [ -f "$HOME/.bashrc" ]; then
+	. "$HOME/.bashrc"
+    fi
+```
+
+>Если вы не совсем понимаете оператор `if`, не беспокойтесь: просто обратитесь к урокам по написанию сценариев оболочки.
+
+Помните, что `~` эквивалентно `$HOME`:
+
+```console
+$ echo ~; echo $HOME
+/home/carol
+/home/carol
+```
+
+>Команды можно объединять точкой с запятой (`;`).
+
+Мы также можем доказать это с помощью оператора `if`:
+
+```console
+$ if [ ~ == "$HOME" ]; then echo "true"; else "false"; fi
+true
+```
+
+Помните: знак равенства `=` используется для присвоения переменной. `==` используется для проверки равенства.
+
