Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -553,5 +553,46 @@ $ if [ ~ == "$HOME" ]; then echo "true"; else "false"; fi
 true
 ```
 
-Помните: знак равенства `=` используется для присвоения переменной. `==` используется для проверки равенства.
+>Помните: знак равенства `=` используется для присвоения переменной. `==` используется для проверки равенства.
+
+`HOSTNAME`  
+В этой переменной хранится имя TCP/IP хост-компьютера:
+```console
+$ echo $HOSTNAME
+debian
+```
+
+`HOSTTYPE`  
+Здесь хранится архитектура процессора главного компьютера:
+
+```console
+$ echo $HOSTTYPE
+x86_64
+```
+
+`LANG`  
+Эта переменная сохраняет локаль системы:
+
+```console
+$ echo $LANG
+en_UK.UTF-8
+```
+
+`LD_LIBRARY_PATH`  
+Эта переменная состоит из набора разделенных двоеточиями каталогов, в которых разделяемые библиотеки используются программами совместно:
+
+```console
+$ echo $LD_LIBRARY_PATH
+/usr/local/lib
+```
+
+`MAIL`  
+В этой переменной хранится файл, в котором Bash ищет электронную почту:
+
+```console
+$ echo $MAIL
+/var/mail/carol
+```
+Другое распространенное значение этой переменной - `/var/spool/mail/$USER`.
+
 
